<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo"
    android:orientation="vertical"
    tools:context=".MenuPedirCita">

    <TextView
        android:id="@+id/tv_tituloPedirCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/indigo_daisy"
        android:gravity="center"
        android:text="@string/tv_tituloPedirCita"
        android:textColor="#FFEB3B"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/tag"
        android:textColor="#FFEB3B"
        android:textSize="17sp" />


    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_personalizado"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/et_numeroTlfn"
        android:inputType="phone"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_zonaTatuar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_personalizado"
        android:hint="@string/et_zona"
        android:inputType="text"
        android:fontFamily="@font/roboto_regular"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_tamanoTattoo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_personalizado"
        android:inputType="text"
        android:hint="@string/et_sizeTattoo"
        android:fontFamily="@font/roboto_regular"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_descripTattoo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_personalizado"
        android:inputType="text"
        android:hint="@string/et_designTatoo"
        android:fontFamily="@font/roboto_regular"
        android:padding="15dp"
        android:textSize="15sp" />


    <Button
        android:id="@+id/bt_confirmaCita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/boton_personalizado"
        android:fontFamily="@font/roboto_regular"
        android:onClick="confirmar"
        android:text="@string/bt_confirmarCita"
        android:textColor="@android:color/white" />



</LinearLayout>